@startuml ClassDiagram
skinparam Style strictuml
skinparam classAttributeIconSize 0
hide empty members

package "Account & Profile" {
  class Account {
    +Guid Id
    +string Email
    +AccountRole Role
    +AccountRole? RequestedRole
    +AccountStatus Status
    +bool IsDeleted
  }

  class UserProfile {
    +Guid ProfileId
    +Guid AccountId
    +string? FullName
    +long? Balance
    +string? Phone
    +string? ImageUrl
  }

  class JockeyProfile {
    +Guid JockeyProfileId
    +Guid AccountId
    +string? FullName
    +string? LicenseNumber
    +float? Weight
    +int? TotalRaces
    +int? TotalWins
    +long? Balance
  }
}

package "Horse & Registration" {
  class Horse {
    +Guid Id
    +Guid OwnerId
    +string HorseName
    +int? Age
    +HorseStatus Status
    +int? RecordWins
  }

  class Registration {
    +Guid RegistrationId
    +Guid RaceId
    +Guid HorseId
    +Guid JockeyId
    +int? GateNumber
    +bool? OwnerConfirmation
    +bool? JockeyConfirmation
    +RegistrationStatus Status
  }
}

package "Race" {
  class Race {
    +Guid RaceId
    +Guid RacecourseId
    +string? RaceName
    +DateTimeOffset? StartTime
    +DateTimeOffset? EndTime
    +int? MaxParticipants
    +RaceStatus Status
    +decimal RegistrationFee
    +decimal PrizePool
  }

  class Racecourse {
    +Guid Id
    +string RacecourseName
    +string? Location
    +string? TrackType
  }

  class RacePool {
    +Guid RacePoolId
    +Guid RaceId
    +BetType BetType
    +decimal TotalAmount
  }

  class RaceResult {
    +Guid ResultId
    +Guid RegistrationId
    +int? FinishPosition
    +int? FinishTime
    +bool? IsDisqualified
  }

  class RefereeReport {
    +Guid ReportId
    +Guid RaceId
    +Guid RefereeId
    +PenaltyType PenaltyType
    +decimal? FineAmount
    +RefereeReportStatus Status
  }
}

package "Betting & Prize" {
  class Bet {
    +Guid BetId
    +Guid SpectatorId
    +Guid RegistrationId
    +decimal BetAmount
    +BetType? BetType
    +float? PayoutRatio
    +BetStatus Status
  }

  class Prize {
    +Guid PrizeId
    +Guid RegistrationId
    +PrizeType? PrizeType
    +decimal? Amount
  }
}

package "Payment & Withdrawal" {
  class Payment {
    +Guid PaymentId
    +Guid AccountId
    +decimal Amount
    +PaymentStatus Status
  }

  class Withdrawal {
    +Guid WithdrawalId
    +Guid AccountId
    +long Amount
    +string BankName
    +WithdrawalStatus Status
  }
}

package "Config" {
  class TakeoutConfig {
    +Guid TakeoutConfigId
    +float TakeoutPercentage
    +ConfigStatus Status
  }

  class JockeyRewardConfig {
    +Guid JockeyRewardConfigId
    +float WinCut
    +float PlaceCut
    +ConfigStatus Status
  }

  class PositionPrizeConfig {
    +Guid PositionPrizeConfigId
    +float Pos1Ratio
    +float Pos2Ratio
    +float Pos3Ratio
    +ConfigStatus Status
  }

  class RegistrationFeeConfig {
    +Guid RegistrationFeeConfigId
    +decimal FeeAmount
    +ConfigStatus Status
  }
}

Account "1" --> "*" UserProfile
Account "1" --> "*" JockeyProfile
Account "1" --> "*" Horse : owns
Account "1" --> "*" Bet : places
Account "1" --> "*" Registration : rides as Jockey
Account "1" --> "*" RefereeReport : writes
Account "1" --> "*" Race : referees
Account "1" --> "*" Payment
Account "1" --> "*" Withdrawal

Racecourse "1" --> "*" Race

Race "1" --> "*" Registration
Race "1" --> "*" RacePool
Race "1" --> "*" RefereeReport
Race "*" --> "0..1" RegistrationFeeConfig
Race "*" --> "0..1" PositionPrizeConfig
Race "*" --> "0..1" JockeyRewardConfig

Horse "1" --> "*" Registration
Registration "1" --> "*" Bet
Registration "1" --> "*" Prize
Registration "1" --> "*" RaceResult
Registration "1" --> "*" RefereeReport

@enduml
